[tool.poetry]
name = "archive"
version = "0.1.0"
description = ""
authors = ["JJon <yanshuo@climblue.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ping3 = "^4.0.4"
loguru = "^0.7.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
